Bug 1335966: skip refreshing ICE cosent for streams with no consent context. r=bwc

MozReview-Commit-ID: 91aZIMdGBAQ