media/mtransport/third_party/nICEr/src/ice/ice_media_stream.c
@@ -592,9 +592,7 @@ void nr_ice_media_stream_refresh_consent_all(nr_ice_media_stream *stream)
 
     comp=STAILQ_FIRST(&stream->components);
     while(comp){
-      if((comp->state != NR_ICE_COMPONENT_DISABLED) &&
-         (comp->local_component->state != NR_ICE_COMPONENT_DISABLED) &&
-          comp->disconnected) {
+      if(comp->disconnected) {
         nr_ice_component_refresh_consent_now(comp);
       }
 
@@ -608,10 +606,7 @@ void nr_ice_media_stream_disconnect_all_components(nr_ice_media_stream *stream)
 
     comp=STAILQ_FIRST(&stream->components);
     while(comp){
-      if((comp->state != NR_ICE_COMPONENT_DISABLED) &&
-         (comp->local_component->state != NR_ICE_COMPONENT_DISABLED)) {
-        comp->disconnected = 1;
-      }
+      comp->disconnected = 1;
 
       comp=STAILQ_NEXT(comp,entry);
     }
@@ -730,6 +725,9 @@ int nr_ice_media_stream_component_failed(nr_ice_media_stream *stream,nr_ice_comp
       NR_async_timer_cancel(stream->timer);
       stream->timer=0;
     }
+
+    /* Cancel consent timers in case it is running already */
+    nr_ice_component_consent_destroy(component);
 
     if (stream->pctx->handler) {
       stream->pctx->handler->vtbl->stream_failed(stream->pctx->handler->obj,stream->local_stream);
